Colored noise caused by Principled SSS, radius 0 and branched pathtracing #51956

Closed
opened 2017-07-02 13:25:38 +02:00 by msalv · 5 comments

System Information
Windows 10 64
Intel i5 6400

Blender Version
Broken: blender-2.78-9cd6b03-win64

Short description of error

Using the subsurface on Principled BSDF shader, the first few samples cause colored noise, only if the radius are 0 and branched pathtracing is used. See attached image. It eventually converges after some samples but I guess is worth reporting just in case.

sss.png

Exact steps for others to reproduce the error
Add a Principled BSDF shader, turn Subsurface to 1, turn all sss radius to 0, change integrator to Branched path tracing

Or open the attached .blend file
sss.blend

**System Information** Windows 10 64 Intel i5 6400 **Blender Version** Broken: blender-2.78-9cd6b03-win64 **Short description of error** Using the subsurface on Principled BSDF shader, the first few samples cause colored noise, only if the radius are 0 and branched pathtracing is used. See attached image. It eventually converges after some samples but I guess is worth reporting just in case. ![sss.png](https://archive.blender.org/developer/F649363/sss.png) **Exact steps for others to reproduce the error** Add a Principled BSDF shader, turn Subsurface to 1, turn all sss radius to 0, change integrator to Branched path tracing Or open the attached .blend file [sss.blend](https://archive.blender.org/developer/F649365/sss.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

This issue was referenced by blender/cycles@cbeb5e98fb

This issue was referenced by blender/cycles@cbeb5e98fb8bd17ec02b7ca1d713328cc130d09c

This issue was referenced by 29c8c50442

This issue was referenced by 29c8c5044217297a8bbb8c9c359d3eb7aec200eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51956
No description provided.