Fix T51956: color noise with principled sss, radius 0 and branched path.